force-app/main/default/objects/Log_Integracion_Event__e/Log_Integracion_Event__e.object-meta.xml
<CustomObject>
    <description>Evento para registrar logs de integración de forma asíncrona (evita DML entre callouts).</description>
    <label>Log Integración Event</label>
    <pluralLabel>Log Integración Events</pluralLabel>
</CustomObject>