force-app/main/default/objects/Log_Integracion_Event__e/fields/Contexto__c.field-meta.xml
<CustomField>
    <fullName>Contexto__c</fullName>
    <label>Contexto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>