force-app/main/default/objects/Log_Integracion_Event__e/fields/Duracion_Ms__c.field-meta.xml
<CustomField>
    <fullName>Duracion_Ms__c</fullName>
    <label>Duración (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>