force-app/main/default/objects/Log_Integracion_Event__e/fields/Exito__c.field-meta.xml
<CustomField>
    <fullName>Exito__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Éxito</label>
    <type>Checkbox</type>
</CustomField>