force-app/main/default/objects/Log_Integracion_Event__e/fields/Mensaje_Error__c.field-meta.xml
<CustomField>
    <fullName>Mensaje_Error__c</fullName>
    <label>Mensaje de error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>