force-app/main/default/objects/Log_Integracion_Event__e/fields/Metodo_HTTP__c.field-meta.xml
<CustomField>
    <fullName>Metodo_HTTP__c</fullName>
    <label>Método HTTP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>