force-app/main/default/objects/Log_Integracion_Event__e/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <label>Origen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>