force-app/main/default/objects/Log_Integracion_Event__e/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>